--- a/english.html
+++ b/english.html
@@ -513,6 +513,8 @@ Error message and password prompt
 
 <li>Perfectionism or OCD</li>
 
+<li>Philip Seymour Hoffman</li>
+
 <li>Philipp</li>
 
 <li>Pina Bausch</li>
@@ -8519,7 +8521,7 @@ Error message and password prompt
 <div created="20161023184709475" modified="20200217184218182" title="$:/state/tab/moresidebar-401116514">
 <pre>$:/core/ui/MoreSideBar/Missing</pre>
 </div>
-<div created="20161023184705203" modified="20200217204447011" title="$:/state/tab/sidebar--1835078512">
+<div created="20161023184705203" modified="20200218185302988" title="$:/state/tab/sidebar--1835078512">
 <pre>$:/core/ui/SideBar/Recent</pre>
 </div>
 <div created="20161024121419094" modified="20161024121426896" title="$:/state/tabs/controlpanel/toolbars-1345989671">
@@ -8528,7 +8530,7 @@ Error message and password prompt
 <div created="20161026202658363" creator="b" modified="20161026202700307" modifier="b" title="$:/status/UserName">
 <pre></pre>
 </div>
-<div list="[[Coen Sisters]]" title="$:/StoryList">
+<div list="[[Philip Seymour Hoffman]] [[Coen Sisters]]" title="$:/StoryList">
 <pre></pre>
 </div>
 <div plugin-type="info" title="$:/temp/info-plugin" type="application/json">
@@ -8548,7 +8550,7 @@ Error message and password prompt
 <div created="20161026143719829" modified="20161026143722391" title="$:/temp/RemoteAssetSearch/$:/config/OfficialPluginLibrary">
 <pre>powered</pre>
 </div>
-<div created="20161023184814872" modified="20200217212601287" title="$:/temp/search">
+<div created="20161023184814872" modified="20200218184934728" title="$:/temp/search">
 <pre></pre>
 </div>
 <div created="20161026143331446" modified="20161026143331446" tags="$:/tags/ServerConnection" title="$:/temp/ServerConnection/http://tiddlywiki.com/library/v5.1.13/index.html" url="http://tiddlywiki.com/library/v5.1.13/index.html">
@@ -8937,8 +8939,7 @@ The idea of the blue marble is the continuation of Iry's thoughts of [[the villa
  &lt;&lt;heblink [[blue-marble-hood]]&gt;&gt;</pre>
 </div>
 <div created="20200217191013013" modified="20200217192054207" tags="[[The team]] [[Food addicts]] Recipes [[Vegan recipes]]" title="Bolognese-alike">
-<pre>
-[img[pictures/cmolonez.jpg]]
+<pre>[img[pictures/cmolonez.jpg]]
 
 
 
@@ -9282,8 +9283,7 @@ This is [[David Byrne|http://davidbyrne.com/]].
  &lt;&lt;heblink [[חלומות שחלמנו]]&gt;&gt;</pre>
 </div>
 <div created="20200217175503049" modified="20200217182615287" tags="[[The estate]]" title="Edith">
-<pre>
-[img[pictures/edith-cohen.jpg]]
+<pre>[img[pictures/edith-cohen.jpg]]
 
 !!![[Eva]]:
 
@@ -9335,8 +9335,7 @@ Lately Iry, Eva and I have been working together on MOTHER, GRANDMOTHER AND I, s
  &lt;&lt;heblink [[אווה כהן]]&gt;&gt;</pre>
 </div>
 <div created="20200217174816634" modified="20200217174955087" tags="[[The estate]] Children" title="Eva`s family tree">
-<pre>
-[img[pictures/eva-garinit.jpg]]
+<pre>[img[pictures/eva-garinit.jpg]]
 
 
 
@@ -9438,8 +9437,7 @@ She loves us and take care of us all. In the end of every working day she moves 
  &lt;&lt;heblink [[ז'נבייב]]&gt;&gt;</pre>
 </div>
 <div created="20200217184337290" modified="20200217184926961" tags="[[The Baumans]] [[I would like to apologize]]" title="Gigi">
-<pre>
-[img[pictures/gigi.jpg]]
+<pre>[img[pictures/gigi.jpg]]
 
 !!![[Yoyo]]:
 
@@ -9686,8 +9684,7 @@ Yes you- killing machines, exterminating and cancelling all that's not in your f
 </pre>
 </div>
 <div created="20200217180444278" modified="20200217181125602" tags="[[The estate]]" title="Iris">
-<pre>
-[img[pictures/iris.jpg]]
+<pre>[img[pictures/iris.jpg]]
 
 
 !!![[Eva]]:
@@ -9934,7 +9931,7 @@ He really tried to be ok. His passiveness seethes me. He loves us, but our activ
 <div _canonical_uri="pictures/newbg-dark.jpg" created="20170607193119061" modified="20170607230143664" tags="" title="logo-bg" type="image/jpeg">
 <pre></pre>
 </div>
-<div created="20200202180428182" modified="20200217213416749" tags="Kitchens [[The kitchen according to Genevieve]]" title="Love">
+<div created="20200202180428182" modified="20200218184744326" tags="Kitchens [[The kitchen according to Genevieve]]" title="Love">
 <pre>[img[pictures/ahava.jpg]]
 
 
@@ -9967,8 +9964,7 @@ For example, it seethes me when people use words purposelessly, like the word lo
 </pre>
 </div>
 <div created="20200217205455825" modified="20200217215926258" tags="[[The kitchen according to Genevieve]] Coffee Kitchens [[Food addicts]]" title="Materials">
-<pre>
-[img[pictures/chomarim.jpg]]
+<pre>[img[pictures/chomarim.jpg]]
 
 !!![[Genevieve]]:
  
@@ -10258,8 +10254,7 @@ It seemed like, everything is fine''
 </pre>
 </div>
 <div created="20200217171010937" modified="20200217171403899" tags="[[The estate]]" title="Our Father">
-<pre>
-[img[pictures/avinu.jpg]]
+<pre>[img[pictures/avinu.jpg]]
 
 
 !!![[Eva]]:
@@ -10299,8 +10294,7 @@ He did his best at raising [[us|The Baumans]] as good people, and in most cases 
  &lt;&lt;heblink [[אבא יואל]]&gt;&gt;</pre>
 </div>
 <div created="20200217185654348" modified="20200217190925890" tags="[[The Baumans]] Meals [[Food addicts]] [[The archive's trustees]]" title="Passover Seder at Dad's and Tirza's">
-<pre>
-[img[pictures/lel-haseder-ezel-aba.jpg]]
+<pre>[img[pictures/lel-haseder-ezel-aba.jpg]]
 
 !!![[Yoyo]]:
 
@@ -10324,8 +10318,7 @@ I’ve tried to paint Pedro Almodóva from [[this photo|https://www.indiewire.co
 </pre>
 </div>
 <div created="20200217203006778" modified="20200217215723272" tags="[[Monkeys with car keys]]" title="Perfectionism or OCD">
-<pre>
-[img[pictures/spiritual-level.jpg]]
+<pre>[img[pictures/spiritual-level.jpg]]
 
 
 !!![[Yoyo]]:
@@ -10334,6 +10327,22 @@ Sometimes I ask myself, do you have a [[spirit level|https://en.wikipedia.org/wi
 
 
  &lt;&lt;heblink [[יסודי או ocd]]&gt;&gt;</pre>
+</div>
+<div created="20200218184450279" modified="20200218185300723" tags="[[Outer sisters]] Films" title="Philip Seymour Hoffman">
+<pre>
+[img[pictures/Philip-Seymour-Hoffman.jpg]]
+
+!!![[Yoyo]]:
+
+Yes, it's true that he was a butthole at [[BIG LEBOWSKI|The Big Lebowski]] of [[Coen Brothers|Ethan and Joel Coen]], but he did it well, and he was also at [[SYNECDOCHE, NEW YORK|https://www.imdb.com/title/tt0383028/]] of [[Charlie Kaufman]], who I also consider as an outer sister,
+
+Love him as a sister,
+[[RIP Philip|https://www.imdb.com/name/nm0000450/]]
+
+
+ &lt;&lt;heblink [[פיליפ סימור הופמן]]&gt;&gt;
+
+</pre>
 </div>
 <div created="20200212172521280" modified="20200216144216938" tags="[[Coen sister]]" title="Philipp">
 <pre>[img[pictures/phillip.jpg]]
@@ -10438,8 +10447,7 @@ For example, I'm proud to say that I don't own a private car, but instead I do p
 &lt;&lt;heblink [[רדיו epgb]]&gt;&gt;</pre>
 </div>
 <div created="20200217174006071" modified="20200217174552629" tags="[[The estate]] Houses" title="Raziel and Rafael">
-<pre>
-[img[pictures/refaelveraziel.jpg]]
+<pre>[img[pictures/refaelveraziel.jpg]]
 
 !!![[Eva]]:
 
@@ -10566,8 +10574,7 @@ Out of the really nearby radius, on the other side of the boulevard, on the hill
 </pre>
 </div>
 <div created="20200217201929999" modified="20200217204221525" tags="Coffee [[Coffee shops]] [[Here in the Ghetto]]" title="Siach Cafe">
-<pre>
-[img[pictures/siach-cafe.jpg]]
+<pre>[img[pictures/siach-cafe.jpg]]
 
 !!![[Tomer]]:
 
@@ -10730,8 +10737,7 @@ Don’t say [[THE BRIDGE|https://www.imdb.com/title/tt1733785/]], say [[Saga Nor
 </pre>
 </div>
 <div created="20200217194809275" modified="20200217195503430" tags="Coffee [[Coffee shops]] [[The kitchen according to Genevieve]] Kitchens Houses" title="The cups we're drinking from">
-<pre>
-[img[pictures/sifley-cafe.jpg]]
+<pre>[img[pictures/sifley-cafe.jpg]]
 
 !!![[Genevieve]]:
 
@@ -10748,8 +10754,7 @@ Sometimes I'm a yoga teacher, even though I'm not a fan of glaze taste. Sometime
 </pre>
 </div>
 <div created="20200217171627257" modified="20200217171826475" tags="Houses" title="The estate">
-<pre>
-[img[pictures/sof-hanachala.jpg]]
+<pre>[img[pictures/sof-hanachala.jpg]]
 
 
 
@@ -10762,8 +10767,7 @@ Sometimes I'm a yoga teacher, even though I'm not a fan of glaze taste. Sometime
 </pre>
 </div>
 <div created="20200217181158582" modified="20200217181918001" tags="[[The estate]] Kitchens Meals Baking" title="The estate`s kitchen">
-<pre>
-[img[pictures/hamitbach-shel-hanachala.jpg]]
+<pre>[img[pictures/hamitbach-shel-hanachala.jpg]]
 
 !!![[Eva]]:
 
@@ -10844,8 +10848,7 @@ The grass after rain, is greenish green.
 </pre>
 </div>
 <div created="20200217200909473" modified="20200217220150111" tags="[[The kitchen according to Genevieve]] Kitchens" title="The hierarchy in the refrigerator">
-<pre>
-[img[pictures/bamekarer.jpg]]
+<pre>[img[pictures/bamekarer.jpg]]
 
 
 !!![[Genevieve]]:
