--- a/index.html
+++ b/index.html
@@ -9184,7 +9184,7 @@ Error message and password prompt
 <div created="20161026202658363" creator="b" modified="20161026202700307" modifier="b" title="$:/status/UserName">
 <pre></pre>
 </div>
-<div list="חומרים [[האחיות כהן]]" title="$:/StoryList">
+<div list="[[פיליפ סימור הופמן]] [[האחיות כהן]]" title="$:/StoryList">
 <pre></pre>
 </div>
 <div plugin-type="info" title="$:/temp/info-plugin" type="application/json">
@@ -9204,7 +9204,7 @@ Error message and password prompt
 <div created="20161026143719829" modified="20161026143722391" title="$:/temp/RemoteAssetSearch/$:/config/OfficialPluginLibrary">
 <pre>powered</pre>
 </div>
-<div created="20161023184814872" modified="20200217205626876" title="$:/temp/search">
+<div created="20161023184814872" modified="20200218184654778" title="$:/temp/search">
 <pre></pre>
 </div>
 <div created="20161026143331446" modified="20161026143331446" tags="$:/tags/ServerConnection" title="$:/temp/ServerConnection/http://tiddlywiki.com/library/v5.1.13/index.html" url="http://tiddlywiki.com/library/v5.1.13/index.html">
@@ -9611,7 +9611,7 @@ well,
 
 </pre>
 </div>
-<div created="20170112164936113" modified="20200217205813006" tags="[[המטבח על פי ז'נבייב]] מטבחים" title="אהבה">
+<div created="20170112164936113" modified="20200218184638919" tags="[[המטבח על פי ז'נבייב]] מטבחים" title="אהבה">
 <pre>[img[pictures/ahava.jpg]]
 
 !!![[ז'נבייב]]:
@@ -17336,7 +17336,7 @@ __אופן ההכנה____
 
 &lt;&lt;englink [[Philipp]]&gt;&gt;</pre>
 </div>
-<div created="20170417192958980" modified="20190126104712750" tags="[[אחיות חוץ]] סרטים" title="פיליפ סימור הופמן">
+<div created="20170417192958980" modified="20200218184713496" tags="[[אחיות חוץ]] סרטים" title="פיליפ סימור הופמן">
 <pre>[img[pictures/Philip-Seymour-Hoffman.jpg]]
 
 !!![[יויו]]:
@@ -17345,7 +17345,10 @@ __אופן ההכנה____
 
 אוהב אותו כאחות,
 
-את [[פיליפ ז&quot;ל|http://www.imdb.com/name/nm0000450/]]</pre>
+את [[פיליפ ז&quot;ל|http://www.imdb.com/name/nm0000450/]]
+
+&lt;&lt;englink [[Philip Seymour Hoffman]]&gt;&gt;
+</pre>
 </div>
 <div created="20170801101117385" modified="20200213181457828" tags="[[אחיות חוץ]] [[אירי טוענת]]" title="פינה באוש">
 <pre>[img[pictures/pina-bausch.jpg]]
