--- a/index.html
+++ b/index.html
@@ -9184,7 +9184,7 @@ Error message and password prompt
 <div created="20161026202658363" creator="b" modified="20161026202700307" modifier="b" title="$:/status/UserName">
 <pre></pre>
 </div>
-<div list="[[פיליפ סימור הופמן]] [[האחיות כהן]]" title="$:/StoryList">
+<div list="[[האחיות כהן]]" title="$:/StoryList">
 <pre></pre>
 </div>
 <div plugin-type="info" title="$:/temp/info-plugin" type="application/json">
@@ -9204,7 +9204,7 @@ Error message and password prompt
 <div created="20161026143719829" modified="20161026143722391" title="$:/temp/RemoteAssetSearch/$:/config/OfficialPluginLibrary">
 <pre>powered</pre>
 </div>
-<div created="20161023184814872" modified="20200218184654778" title="$:/temp/search">
+<div created="20161023184814872" modified="20200218185542016" title="$:/temp/search">
 <pre></pre>
 </div>
 <div created="20161026143331446" modified="20161026143331446" tags="$:/tags/ServerConnection" title="$:/temp/ServerConnection/http://tiddlywiki.com/library/v5.1.13/index.html" url="http://tiddlywiki.com/library/v5.1.13/index.html">
@@ -9611,7 +9611,7 @@ well,
 
 </pre>
 </div>
-<div created="20170112164936113" modified="20200218184638919" tags="[[המטבח על פי ז'נבייב]] מטבחים" title="אהבה">
+<div created="20170112164936113" modified="20200218191255604" tags="[[המטבח על פי ז'נבייב]] מטבחים" title="אהבה">
 <pre>[img[pictures/ahava.jpg]]
 
 !!![[ז'נבייב]]:
@@ -10423,7 +10423,7 @@ well,
 
 </pre>
 </div>
-<div created="20170327150319064" modified="20170417190601284" tags="[[אחות כהן]]" title="אנה">
+<div created="20170327150319064" modified="20200218190752426" tags="[[אחות כהן]]" title="אנה">
 <pre>[img[pictures/JcnhaFI7DwaT9664.jpg]]
 
 !!![[יויו]]:
@@ -10435,7 +10435,8 @@ well,
 היא מייצרת תכשירים קוסמטיים ומרפאים מחומרים טבעיים. היא מייצרת את טיפות האוזניים היעילות ביותר אי פעם, והנשים שלנו, אווה וז'נבייב מאד מרוצות ממסכת הפנים שלה, שעשויה מתערובת אדמה כלשהי, שארוזה בקופסה, ומגיעה עם בקבוקון שמן, אותו מערבבים אל תוך תערובת האדמה לפני השימוש.
 
 
-</pre>
+
+&lt;&lt;englink [[Anna]]&gt;&gt;</pre>
 </div>
 <div created="20170320190240293" modified="20180208154106461" tags="HH מוזיקה" title="אנט ג'מיימה">
 <pre>[img[pictures/aunt-jemima.jpg]]
@@ -18018,26 +18019,29 @@ Fapina''
 &lt;&lt;englink [[Radio epgb]]&gt;&gt;
 </pre>
 </div>
-<div created="20161115145921007" modified="20171029224729021" tags="[[אחות כהן]]" title="רוז'ה">
+<div created="20161115145921007" modified="20200218191320197" tags="[[אחות כהן]]" title="רוז'ה">
 <pre>[img[pictures/5VdqSTjL1ficmZ1K.jpg]]
 
 
 !!![[יויו]]:
 
 כשראיתי בפעם הראשונה את רוז'ה הושלמה מבחינתי דמותו של שלמה קומפלישן, עורך הוידאו הסטלן, שמצלם ועורך 12 סרטוני וידאו קצרצרים בהם הוא מציע סוגים שונים של מדיטציה, שעל דמותו חשבתי בתקופה שאחרי [[אלה|כוכב המשאלות 04]].
-הוא ג'ינג'י לא גדול, אך מעט מסורבל, עם עיני דב טובות בצבע דבש, הוא מצחקק תדיר אל תוך עצמו ונע בחוסר שקט מצד לצד.
+הוא ג'ינג'י לא גדול, אך מעט מסורבל, עם עיני דב טובות בצבע דבש, הוא מצחקק תדיר אל תוך עצמו ונע בחוסר.
 כן, הרבה שעות מדיטציה נדרשות. 
 
 על כל פנים, בתקופה הקשה ביותר בהבראתה של גורה, הוא הגיע לבית החולים עם קבוצה של מתמחים ברפואה אלטרנטיבית/משלימה, ומיד התחבר לגורה והיא אליו. 
 הוא אדם עם חשיבה מקורית. כשהוא מקשיב לך, הוא מביט בך בשקט מבלי להסיר את עיניו. הוא בן 36. הוא נולד בפריז. אביו, שנפטר לפני שלוש שנים, היה פקיד במשרדי מס הכנסה. אמו עובדת בגלרי לה פאייט ויש לו אח בן 29.
 הוא סיים תיכון במגמת קולנוע, וכבר כנער פרנס עצמו מעריכת סרטי משפחה. כשהיה בן 22 נאלץ להיגמל מהמורפיום ששיכך את כאבי הטיפולים בסרטן בלוטות הלימפה שנתגלה אצלו שנתיים קודם. 
 בשנים בהן היה חולה וגם אחריהן הוא עבר סוגים שונים של טיפולים אלטרנטיביים תוך שהוא ממשיך לעבוד כעורך וידאו.
+
 בקרוב הוא יסיים את לימודיו, כשהוא כבר עסוק למדי בטיפול וליווי במחלימים. הוא משתמש בהילינג הכולל לעתים מגע מינימליסטי. הוא משתמש הרבה בדמיון מודרך, במדיטציית נשימות (שבהחלט תיכנס לסדנאות של שלמה קומפלישן ביום שרוז'ה יסכים לגלם את דמותו). הוא נעזר בשיטות נוספות שהוא מכיר.
 הוא [[אחות|האחיות כהן]], ובשנתיים האחרונות הוא חבר של [[אנה]], שמייצרת תכשירים קוסמטיים ומרפאים מחומרים טבעיים. היא מייצרת את טיפות האוזניים היעילות ביותר אי פעם, והנשים שלנו, אווה וז'נבייב מאד מרוצות ממסכת הפנים שלה, שעשויה מתערובת אדמה כלשהי, שארוזה בקופסה, ומגיעה עם בקבוקון שמן, אותו מערבבים אל תוך תערובת האדמה לפני השימוש.
 מבחינת רוז'ה, שיושב לידי כעת, כתבתי עליו מספיק לעת עתה.
 
 
 
+
+&lt;&lt;englink [[Roje]]&gt;&gt;
 </pre>
 </div>
 <div created="20170718152042465" modified="20180605132506798" tags="[[חיות אוכל]] מתכונים" title="רוטב בשאמל">
