--- a/english.html
+++ b/english.html
@@ -273,6 +273,8 @@ Error message and password prompt
 
 <li>Angelic</li>
 
+<li>Anna</li>
+
 <li>Assuming and Preserving</li>
 
 <li>Ayala Malach Pines</li>
@@ -540,6 +542,8 @@ Error message and password prompt
 <li>Restaurants</li>
 
 <li>RIP Dina</li>
+
+<li>Roje</li>
 
 <li>Romema</li>
 
@@ -8521,7 +8525,7 @@ Error message and password prompt
 <div created="20161023184709475" modified="20200217184218182" title="$:/state/tab/moresidebar-401116514">
 <pre>$:/core/ui/MoreSideBar/Missing</pre>
 </div>
-<div created="20161023184705203" modified="20200218185302988" title="$:/state/tab/sidebar--1835078512">
+<div created="20161023184705203" modified="20200218190922562" title="$:/state/tab/sidebar--1835078512">
 <pre>$:/core/ui/SideBar/Recent</pre>
 </div>
 <div created="20161024121419094" modified="20161024121426896" title="$:/state/tabs/controlpanel/toolbars-1345989671">
@@ -8530,7 +8534,7 @@ Error message and password prompt
 <div created="20161026202658363" creator="b" modified="20161026202700307" modifier="b" title="$:/status/UserName">
 <pre></pre>
 </div>
-<div list="[[Philip Seymour Hoffman]] [[Coen Sisters]]" title="$:/StoryList">
+<div list="Roje [[Coen Sisters]]" title="$:/StoryList">
 <pre></pre>
 </div>
 <div plugin-type="info" title="$:/temp/info-plugin" type="application/json">
@@ -8836,6 +8840,21 @@ He's smart, talented, diligent, curious, he smiles a lot- even though I chose to
 
  &lt;&lt;heblink [[אנג'ליק]]&gt;&gt;
 </pre>
+</div>
+<div created="20200218185443099" modified="20200218190918037" tags="[[Coen sister]]" title="Anna">
+<pre>
+[img[pictures/JcnhaFI7DwaT9664.jpg]]
+
+!!![[Yoyo]]:
+
+Anna of [[Roje]], was born in Berlin, and when she was 5 her parents immigrated to Paris.
+
+She is 30. She studied Botanic.
+She creates cosmetic medical products from natural materials. She produces the most effective eardrops there are, and our women, [[Eva]] and [[Genevieve]] are very pleased with her face masks, that are made from some sort of soil mixture, that is packaged in a box, and arrives with oil bottle, which is added into the soil mixture before the usage.
+
+
+
+ &lt;&lt;heblink [[אנה]]&gt;&gt;</pre>
 </div>
 <div created="20200215095540063" modified="20200215095741084" tags="[[In the Animal Farm]]" title="Assuming and Preserving">
 <pre>[img[pictures/nekiyey-capaim.jpg]]
@@ -9931,7 +9950,7 @@ He really tried to be ok. His passiveness seethes me. He loves us, but our activ
 <div _canonical_uri="pictures/newbg-dark.jpg" created="20170607193119061" modified="20170607230143664" tags="" title="logo-bg" type="image/jpeg">
 <pre></pre>
 </div>
-<div created="20200202180428182" modified="20200218184744326" tags="Kitchens [[The kitchen according to Genevieve]]" title="Love">
+<div created="20200202180428182" modified="20200218191031312" tags="Kitchens [[The kitchen according to Genevieve]]" title="Love">
 <pre>[img[pictures/ahava.jpg]]
 
 
@@ -10518,6 +10537,13 @@ Though, therapy speaking, I'm covered in every direction, only recently after [[
 
 
  &lt;&lt;heblink [[דינה זכרה לברכה]]&gt;&gt;</pre>
+</div>
+<div created="20200218190952659" modified="20200218191053045" tags="[[Coen sister]]" title="Roje">
+<pre>
+[img[pictures/5VdqSTjL1ficmZ1K.jpg]]
+
+
+ &lt;&lt;heblink [[רוז'ה]]&gt;&gt;</pre>
 </div>
 <div created="20200215171042985" modified="20200215171543170" tags="Once [[Here in the Ghetto]] [[True stories]]" title="Romema">
 <pre>[img[pictures/romema.jpg]]
