--- a/english.html
+++ b/english.html
@@ -8525,7 +8525,7 @@ Error message and password prompt
 <div created="20161023184709475" modified="20200217184218182" title="$:/state/tab/moresidebar-401116514">
 <pre>$:/core/ui/MoreSideBar/Missing</pre>
 </div>
-<div created="20161023184705203" modified="20200218190922562" title="$:/state/tab/sidebar--1835078512">
+<div created="20161023184705203" modified="20200218191640265" title="$:/state/tab/sidebar--1835078512">
 <pre>$:/core/ui/SideBar/Recent</pre>
 </div>
 <div created="20161024121419094" modified="20161024121426896" title="$:/state/tabs/controlpanel/toolbars-1345989671">
@@ -8534,7 +8534,7 @@ Error message and password prompt
 <div created="20161026202658363" creator="b" modified="20161026202700307" modifier="b" title="$:/status/UserName">
 <pre></pre>
 </div>
-<div list="Roje [[Coen Sisters]]" title="$:/StoryList">
+<div list="[[Coen Sisters]]" title="$:/StoryList">
 <pre></pre>
 </div>
 <div plugin-type="info" title="$:/temp/info-plugin" type="application/json">
@@ -8554,7 +8554,7 @@ Error message and password prompt
 <div created="20161026143719829" modified="20161026143722391" title="$:/temp/RemoteAssetSearch/$:/config/OfficialPluginLibrary">
 <pre>powered</pre>
 </div>
-<div created="20161023184814872" modified="20200218184934728" title="$:/temp/search">
+<div created="20161023184814872" modified="20200218191618630" title="$:/temp/search">
 <pre></pre>
 </div>
 <div created="20161026143331446" modified="20161026143331446" tags="$:/tags/ServerConnection" title="$:/temp/ServerConnection/http://tiddlywiki.com/library/v5.1.13/index.html" url="http://tiddlywiki.com/library/v5.1.13/index.html">
@@ -10564,8 +10564,13 @@ Rosh Hashana 2017 was really something. Meaning, in the end of the day it was gr
 
  &lt;&lt;heblink [[ארוחת ראש השנה]]&gt;&gt;</pre>
 </div>
-<div created="20200202163339570" modified="20200215132700910" tags="[[Coen sister]] [[Single parent children]]" title="Rushell">
+<div created="20200202163339570" modified="20200218191641946" tags="[[Coen sister]] [[Single parent children]]" title="Rushell">
 <pre>[img[pictures/rachel.jpg]]
+
+
+!!![[Gura]]:
+
+Rushell is the youngest daughter of [[Genevieve]], she was born in 2000, she's in high school majoring in plastic art and she's a real [[joker|Single parent children]].
 
 
 
