--- a/english.html
+++ b/english.html
@@ -439,6 +439,8 @@ Error message and password prompt
 
 <li>Keep on bleeding</li>
 
+<li>Keren</li>
+
 <li>Kiryat Sefer Park</li>
 
 <li>Kitchens</li>
@@ -486,6 +488,8 @@ Error message and password prompt
 <li>My Mother</li>
 
 <li>My whole brother Aharon</li>
+
+<li>Nadia</li>
 
 <li>Nano and I</li>
 
@@ -8525,7 +8529,7 @@ Error message and password prompt
 <div created="20161023184709475" modified="20200217184218182" title="$:/state/tab/moresidebar-401116514">
 <pre>$:/core/ui/MoreSideBar/Missing</pre>
 </div>
-<div created="20161023184705203" modified="20200218191640265" title="$:/state/tab/sidebar--1835078512">
+<div created="20161023184705203" modified="20200218192929962" title="$:/state/tab/sidebar--1835078512">
 <pre>$:/core/ui/SideBar/Recent</pre>
 </div>
 <div created="20161024121419094" modified="20161024121426896" title="$:/state/tabs/controlpanel/toolbars-1345989671">
@@ -8554,7 +8558,7 @@ Error message and password prompt
 <div created="20161026143719829" modified="20161026143722391" title="$:/temp/RemoteAssetSearch/$:/config/OfficialPluginLibrary">
 <pre>powered</pre>
 </div>
-<div created="20161023184814872" modified="20200218191618630" title="$:/temp/search">
+<div created="20161023184814872" modified="20200218192853302" title="$:/temp/search">
 <pre></pre>
 </div>
 <div created="20161026143331446" modified="20161026143331446" tags="$:/tags/ServerConnection" title="$:/temp/ServerConnection/http://tiddlywiki.com/library/v5.1.13/index.html" url="http://tiddlywiki.com/library/v5.1.13/index.html">
@@ -9499,8 +9503,24 @@ She's one of the lucky fellows who were raised together in a group, who came fro
 
 </pre>
 </div>
-<div created="20200202161830591" modified="20200202162556278" tags="[[Coen sister]] Laundry [[The Baumans]] [[The archive's trustees]]" title="Gura">
+<div created="20200202161830591" modified="20200218192941884" tags="[[Coen sister]] Laundry [[The Baumans]] [[The archive's trustees]]" title="Gura">
 <pre>[img[pictures/VOYeMadgknrTKN6D.jpg]]
+
+!!![[Yoyo]]:
+
+Gura my sister is a babe in denial/Pippi Longstocking.
+
+She's the love of my life/pride joy and I'll guard her forever.
+
+I found this picture thrown in the garbage can near the dryer. Yes, she told me that for several days she has been [[trying to draw herself|Life is not About Talking]], but she's not succeeding.
+ 
+She's the youngest daughter of my parents, [[Dina|RIP Dina]] may she rest in peace and [[Yoel|Papa Yoel]] may he live long and prosper, that gave birth to us five: [[Nadia]], [[Keren]], Me, [[Gigi]] and the Gura.
+ 
+After she got hurt she read and wrote all the time.
+
+Also now, since I've opened this site, she hasn't stopped writing, filling and decorating and trying to act properly. 
+
+
 
 
  &lt;&lt;heblink [[גורה]]&gt;&gt;
@@ -9860,6 +9880,14 @@ Gura painted the [[drawing|To draw]] from [[this picture|https://res.cloudinary.
  &lt;&lt;heblink [[ממשיכים לדמם]]&gt;&gt;
 </pre>
 </div>
+<div created="20200218193250690" modified="20200218193352875" tags="[[The Baumans]]" title="Keren">
+<pre>
+[img[pictures/keren.jpg]]
+
+
+ &lt;&lt;heblink [[קרן]]&gt;&gt;
+</pre>
+</div>
 <div created="20200217144732663" modified="20200217145443157" tags="[[Here in the Ghetto]] [[On the road to somewhere]]" title="Kiryat Sefer Park">
 <pre>[img[pictures/ginat-kiryat-sefer.jpg]]
 
@@ -9950,7 +9978,7 @@ He really tried to be ok. His passiveness seethes me. He loves us, but our activ
 <div _canonical_uri="pictures/newbg-dark.jpg" created="20170607193119061" modified="20170607230143664" tags="" title="logo-bg" type="image/jpeg">
 <pre></pre>
 </div>
-<div created="20200202180428182" modified="20200218191031312" tags="Kitchens [[The kitchen according to Genevieve]]" title="Love">
+<div created="20200202180428182" modified="20200218193320801" tags="Kitchens [[The kitchen according to Genevieve]]" title="Love">
 <pre>[img[pictures/ahava.jpg]]
 
 
@@ -10172,6 +10200,13 @@ It is true that my brother abandoned his guarding position on me – his younger
 
 
  &lt;&lt;heblink [[אהרון אחי השלם]]&gt;&gt;</pre>
+</div>
+<div created="20200218193037453" modified="20200218193133555" tags="[[The Baumans]]" title="Nadia">
+<pre>
+[img[pictures/nDjOjcd5qoNrHdfU.jpg]]
+
+
+ &lt;&lt;heblink [[נדיה]]&gt;&gt;</pre>
 </div>
 <div created="20200215184111637" modified="20200215184505280" tags="Mothers [[Here in the Ghetto]] Children [[Single parent children]]" title="Nano and I">
 <pre>[img[pictures/nano-ve-ani.jpg]]
