--- a/index.html
+++ b/index.html
@@ -9204,7 +9204,7 @@ Error message and password prompt
 <div created="20161026143719829" modified="20161026143722391" title="$:/temp/RemoteAssetSearch/$:/config/OfficialPluginLibrary">
 <pre>powered</pre>
 </div>
-<div created="20161023184814872" modified="20200218192105292" title="$:/temp/search">
+<div created="20161023184814872" modified="20200218194758199" title="$:/temp/search">
 <pre></pre>
 </div>
 <div created="20161026143331446" modified="20161026143331446" tags="$:/tags/ServerConnection" title="$:/temp/ServerConnection/http://tiddlywiki.com/library/v5.1.13/index.html" url="http://tiddlywiki.com/library/v5.1.13/index.html">
@@ -9611,7 +9611,7 @@ well,
 
 </pre>
 </div>
-<div created="20170112164936113" modified="20200218193421167" tags="[[המטבח על פי ז'נבייב]] מטבחים" title="אהבה">
+<div created="20170112164936113" modified="20200218195331135" tags="[[המטבח על פי ז'נבייב]] מטבחים" title="אהבה">
 <pre>[img[pictures/ahava.jpg]]
 
 !!![[ז'נבייב]]:
@@ -15478,13 +15478,16 @@ CJ, הקשוחה שבחבורה. ימאית, מתבודדת, חשדנית. זו 
 
 מצפה ראשית, או בקיצור, [[מִיצְפֶּרֶש|דיור מוגז]] (כמחווה למפעל [[מִיצְפְרֶש|מיצפרש]] המקומי), הוא הישוב [[שאסדת טתיס|ים טתיס]]  הייתה רק תרוץ להקמתו המתבקשת. בצידה המזרחי נמצא [[רובע מרינה|מרינה זוטו]], שהמשכו הוא אזור תעשיה, בו שוכן, בין השאר, הבניין של [[שלום]].</pre>
 </div>
-<div created="20170223175057546" modified="20180814104137587" tags="חבר" title="מקלדת">
+<div created="20170223175057546" modified="20200218195412288" tags="חבר" title="מקלדת">
 <pre>[img[pictures/mikledet.jpg]]
 
 !!![[גורה]]:
 
 ''
-חברה טובה''</pre>
+חברה טובה''
+
+&lt;&lt;englink [[Key board]]&gt;&gt;
+</pre>
 </div>
 <div created="20170225214818327" modified="20200215180843734" tags="אימהות" title="מריאן">
 <pre>[img[pictures/marian.jpg]]
@@ -17979,7 +17982,7 @@ Fapina''
 &lt;&lt;englink [[Karl Ove Knausgard]]&gt;&gt;
 </pre>
 </div>
-<div created="20170401220808061" modified="20200218193446257" tags="[[משפחת באומן]]" title="קרן">
+<div created="20170401220808061" modified="20200218193645484" tags="[[משפחת באומן]]" title="קרן">
 <pre>[img[pictures/keren.jpg]]
 
 !!![[יויו]]:
