--- a/english.html
+++ b/english.html
@@ -441,6 +441,8 @@ Error message and password prompt
 
 <li>Keren</li>
 
+<li>Key board</li>
+
 <li>Kiryat Sefer Park</li>
 
 <li>Kitchens</li>
@@ -8529,7 +8531,7 @@ Error message and password prompt
 <div created="20161023184709475" modified="20200217184218182" title="$:/state/tab/moresidebar-401116514">
 <pre>$:/core/ui/MoreSideBar/Missing</pre>
 </div>
-<div created="20161023184705203" modified="20200218192929962" title="$:/state/tab/sidebar--1835078512">
+<div created="20161023184705203" modified="20200218195054146" title="$:/state/tab/sidebar--1835078512">
 <pre>$:/core/ui/SideBar/Recent</pre>
 </div>
 <div created="20161024121419094" modified="20161024121426896" title="$:/state/tabs/controlpanel/toolbars-1345989671">
@@ -8558,7 +8560,7 @@ Error message and password prompt
 <div created="20161026143719829" modified="20161026143722391" title="$:/temp/RemoteAssetSearch/$:/config/OfficialPluginLibrary">
 <pre>powered</pre>
 </div>
-<div created="20161023184814872" modified="20200218192853302" title="$:/temp/search">
+<div created="20161023184814872" modified="20200218194636497" title="$:/temp/search">
 <pre></pre>
 </div>
 <div created="20161026143331446" modified="20161026143331446" tags="$:/tags/ServerConnection" title="$:/temp/ServerConnection/http://tiddlywiki.com/library/v5.1.13/index.html" url="http://tiddlywiki.com/library/v5.1.13/index.html">
@@ -9888,6 +9890,19 @@ Gura painted the [[drawing|To draw]] from [[this picture|https://res.cloudinary.
  &lt;&lt;heblink [[קרן]]&gt;&gt;
 </pre>
 </div>
+<div created="20200218195056718" modified="20200218195401760" tags="[[A friend]]" title="Key board">
+<pre>
+[img[pictures/mikledet.jpg]]
+
+!!![[Gura]]:
+''
+A good friend''
+
+
+ &lt;&lt;heblink [[מקלדת]]&gt;&gt;
+
+</pre>
+</div>
 <div created="20200217144732663" modified="20200217145443157" tags="[[Here in the Ghetto]] [[On the road to somewhere]]" title="Kiryat Sefer Park">
 <pre>[img[pictures/ginat-kiryat-sefer.jpg]]
 
@@ -9978,7 +9993,7 @@ He really tried to be ok. His passiveness seethes me. He loves us, but our activ
 <div _canonical_uri="pictures/newbg-dark.jpg" created="20170607193119061" modified="20170607230143664" tags="" title="logo-bg" type="image/jpeg">
 <pre></pre>
 </div>
-<div created="20200202180428182" modified="20200218193320801" tags="Kitchens [[The kitchen according to Genevieve]]" title="Love">
+<div created="20200202180428182" modified="20200218195220696" tags="Kitchens [[The kitchen according to Genevieve]]" title="Love">
 <pre>[img[pictures/ahava.jpg]]
 
 
@@ -10097,8 +10112,18 @@ And tea is for the sicken ones.
 
 </pre>
 </div>
-<div created="20200215134900574" modified="20200215135012769" tags="[[Outer sisters]] Films Music" title="Michel Gondry">
+<div created="20200215134900574" modified="20200218195044337" tags="[[Outer sisters]] Films Music" title="Michel Gondry">
 <pre>[img[pictures/michel-gondry.jpg]]
+
+
+!!![[Rushell]]:
+
+[[This is|https://www.youtube.com/watch?v=fTH71AAxXmM]] a video clip that [[Michel|https://www.imdb.com/name/nm0327273/]] did.
+
+Alfred introduced me to him
+. 
+I watched T[[HE SCIENCE OF SLEEP|https://www.imdb.com/title/tt0354899/]] and fell in love. For a several days afterwards I've seen everything I could’ve put my hands on with the help of [[the keyboard|The key board]], and I fell in love with [[Bjork]] from all of those views.  
+
 
 
  &lt;&lt;heblink [[מישל גונדרי]]&gt;&gt;
@@ -10201,9 +10226,14 @@ It is true that my brother abandoned his guarding position on me – his younger
 
  &lt;&lt;heblink [[אהרון אחי השלם]]&gt;&gt;</pre>
 </div>
-<div created="20200218193037453" modified="20200218193133555" tags="[[The Baumans]]" title="Nadia">
+<div created="20200218193037453" modified="20200218194548616" tags="[[The Baumans]]" title="Nadia">
 <pre>
 [img[pictures/nDjOjcd5qoNrHdfU.jpg]]
+
+
+!!![[Yoyo]]:
+
+The older biologic sister of Gura and me.
 
 
  &lt;&lt;heblink [[נדיה]]&gt;&gt;</pre>
