--- a/english.html
+++ b/english.html
@@ -8531,7 +8531,7 @@ Error message and password prompt
 <div created="20161023184709475" modified="20200217184218182" title="$:/state/tab/moresidebar-401116514">
 <pre>$:/core/ui/MoreSideBar/Missing</pre>
 </div>
-<div created="20161023184705203" modified="20200218195054146" title="$:/state/tab/sidebar--1835078512">
+<div created="20161023184705203" modified="20200218195922089" title="$:/state/tab/sidebar--1835078512">
 <pre>$:/core/ui/SideBar/Recent</pre>
 </div>
 <div created="20161024121419094" modified="20161024121426896" title="$:/state/tabs/controlpanel/toolbars-1345989671">
@@ -8560,7 +8560,7 @@ Error message and password prompt
 <div created="20161026143719829" modified="20161026143722391" title="$:/temp/RemoteAssetSearch/$:/config/OfficialPluginLibrary">
 <pre>powered</pre>
 </div>
-<div created="20161023184814872" modified="20200218194636497" title="$:/temp/search">
+<div created="20161023184814872" modified="20200218195817904" title="$:/temp/search">
 <pre></pre>
 </div>
 <div created="20161026143331446" modified="20161026143331446" tags="$:/tags/ServerConnection" title="$:/temp/ServerConnection/http://tiddlywiki.com/library/v5.1.13/index.html" url="http://tiddlywiki.com/library/v5.1.13/index.html">
@@ -10112,7 +10112,7 @@ And tea is for the sicken ones.
 
 </pre>
 </div>
-<div created="20200215134900574" modified="20200218195044337" tags="[[Outer sisters]] Films Music" title="Michel Gondry">
+<div created="20200215134900574" modified="20200218195918289" tags="[[Outer sisters]] Films Music" title="Michel Gondry">
 <pre>[img[pictures/michel-gondry.jpg]]
 
 
@@ -10122,7 +10122,7 @@ And tea is for the sicken ones.
 
 Alfred introduced me to him
 . 
-I watched T[[HE SCIENCE OF SLEEP|https://www.imdb.com/title/tt0354899/]] and fell in love. For a several days afterwards I've seen everything I could’ve put my hands on with the help of [[the keyboard|The key board]], and I fell in love with [[Bjork]] from all of those views.  
+I watched T[[HE SCIENCE OF SLEEP|https://www.imdb.com/title/tt0354899/]] and fell in love. For a several days afterwards I've seen everything I could’ve put my hands on with the help of [[the keyboard|Key board]], and I fell in love with [[Bjork]] from all of those views.  
 
 
 
@@ -10348,8 +10348,17 @@ I've met my only father, after many years we haven't met. This picture was taken
 
  &lt;&lt;heblink [[אבינו]]&gt;&gt;</pre>
 </div>
-<div created="20200212163427451" modified="20200212164322920" tags="[[Monkeys with car keys]] [[How many songs can you even invent at all]]" title="Outer sisters">
+<div created="20200212163427451" modified="20200218200009285" tags="[[Monkeys with car keys]] [[How many songs can you even invent at all]]" title="Outer sisters">
 <pre>[img[pictures/ahayot-huz.jpg]]
+
+
+!!![[Gura]]:
+
+[[Yoyo]] has the intendent to get emotionally involved with people who don't even know about his existence, to the point when he feels like they're his sisters. Those are the outer sisters - and there are a lot of outer sisters on our behalf.
+
+Here in the [[archive|The archive's trustees]] we add from time to time, with love and admiration, when an outer sister suddenly comes to the mind of one of us, regarding the things she wanted to say or something else.
+
+
 
 &lt;&lt;list-links filter:&quot;[tag[Outer sisters]]&quot;&gt;&gt;
 
