--- a/english.html
+++ b/english.html
@@ -573,6 +573,8 @@ Error message and password prompt
 
 <li>Spike Lee</li>
 
+<li>Steve Buscemi</li>
+
 <li>Stories I`ve told Norma</li>
 
 <li>Tel Aviv Editorial</li>
@@ -8531,7 +8533,7 @@ Error message and password prompt
 <div created="20161023184709475" modified="20200217184218182" title="$:/state/tab/moresidebar-401116514">
 <pre>$:/core/ui/MoreSideBar/Missing</pre>
 </div>
-<div created="20161023184705203" modified="20200218195922089" title="$:/state/tab/sidebar--1835078512">
+<div created="20161023184705203" modified="20200218203555873" title="$:/state/tab/sidebar--1835078512">
 <pre>$:/core/ui/SideBar/Recent</pre>
 </div>
 <div created="20161024121419094" modified="20161024121426896" title="$:/state/tabs/controlpanel/toolbars-1345989671">
@@ -8540,7 +8542,7 @@ Error message and password prompt
 <div created="20161026202658363" creator="b" modified="20161026202700307" modifier="b" title="$:/status/UserName">
 <pre></pre>
 </div>
-<div list="[[Coen Sisters]]" title="$:/StoryList">
+<div list="[[Steve Buscemi]] [[Coen Sisters]]" title="$:/StoryList">
 <pre></pre>
 </div>
 <div plugin-type="info" title="$:/temp/info-plugin" type="application/json">
@@ -8560,7 +8562,7 @@ Error message and password prompt
 <div created="20161026143719829" modified="20161026143722391" title="$:/temp/RemoteAssetSearch/$:/config/OfficialPluginLibrary">
 <pre>powered</pre>
 </div>
-<div created="20161023184814872" modified="20200218195817904" title="$:/temp/search">
+<div created="20161023184814872" modified="20200218202258738" title="$:/temp/search">
 <pre></pre>
 </div>
 <div created="20161026143331446" modified="20161026143331446" tags="$:/tags/ServerConnection" title="$:/temp/ServerConnection/http://tiddlywiki.com/library/v5.1.13/index.html" url="http://tiddlywiki.com/library/v5.1.13/index.html">
@@ -9993,7 +9995,7 @@ He really tried to be ok. His passiveness seethes me. He loves us, but our activ
 <div _canonical_uri="pictures/newbg-dark.jpg" created="20170607193119061" modified="20170607230143664" tags="" title="logo-bg" type="image/jpeg">
 <pre></pre>
 </div>
-<div created="20200202180428182" modified="20200218195220696" tags="Kitchens [[The kitchen according to Genevieve]]" title="Love">
+<div created="20200202180428182" modified="20200218204017716" tags="Kitchens [[The kitchen according to Genevieve]]" title="Love">
 <pre>[img[pictures/ahava.jpg]]
 
 
@@ -10751,6 +10753,26 @@ And I say:
 5.    [[BlaKkKlansman|Films]]
 
  &lt;&lt;heblink [[ספייק לי]]&gt;&gt;
+</pre>
+</div>
+<div created="20200218202232757" modified="20200218204432570" tags="[[Outer sisters]] Films" title="Steve Buscemi">
+<pre>
+[img[pictures/steve-buscemi.jpg]]
+
+
+!!![[Yoyo]]:
+
+The thing that surprised me the most about [[Steve Buscemi|https://m.imdb.com/name/nm0000114/?ref_=m_nmfm_nm]], is that he really &quot;sins&quot; at [[directing|https://m.imdb.com/name/nm0000114/filmotype/director?ref_=m_nmfm_2]] movies and episodes of TV shows. 
+
+He's one of my favorite actors that I love with all my heart, he has a good soul and he's a sister.
+
+He was born on Friday the 13th, 1957, he was a firefighter at the little Italy department of New York municipality for four years. He acted in 157 movies, produced 11 movies. He appeared in the soundtrack of 8 movies, he wrote three scripts, he played in 11 movies of [[Adam Sandler|https://www.cinemablend.com/new/Quiz-Guess-Adam-Sandler-Movie-By-Steve-Buscemi-Character-70254.html]], 6 movies of [[Coen brothers|https://en.wikipedia.org/wiki/List_of_frequent_Coen_Brothers_collaborators]]. He was surprised when they offered him the leading actor part at [[Boardwalk Empire|https://www.imdb.com/title/tt0979432/]], which he won a [[golden globe|https://www.youtube.com/watch?v=OGFJ6G7UmD8]] for. He [[died in 20 movies|https://www.imdb.com/list/ls000805145/]], including [[The Sopranos]], but he most liked to die at [[Big Lebowski|https://www.youtube.com/watch?v=CWtby5WqHdM]], including the death reason.
+
+You can read more [[trivia details|https://m.imdb.com/name/nm0000114/trivia?ref_=m_nm_dyk_trv]] about this man. [[Here's|https://www.youtube.com/watch?v=BqVrpFXXdB0]] an entertaining interview as a bonus, and may sweet Steve be strong, healthy and happy. 
+
+
+
+ &lt;&lt;heblink [[סטיב בושמי]]&gt;&gt;
 </pre>
 </div>
 <div created="20200216190653393" modified="20200216192259572" tags="[[True stories]] Houses" title="Stories I`ve told Norma">
