--- a/english.html
+++ b/english.html
@@ -10755,7 +10755,7 @@ And I say:
  &lt;&lt;heblink [[ספייק לי]]&gt;&gt;
 </pre>
 </div>
-<div created="20200218202232757" modified="20200218204432570" tags="[[Outer sisters]] Films" title="Steve Buscemi">
+<div created="20200218202232757" modified="20200218205624549" tags="[[Outer sisters]] Films [[The Sopranos]] TV [[TV Series]]" title="Steve Buscemi">
 <pre>
 [img[pictures/steve-buscemi.jpg]]
 
