--- a/index.html
+++ b/index.html
@@ -9184,7 +9184,7 @@ Error message and password prompt
 <div created="20161026202658363" creator="b" modified="20161026202700307" modifier="b" title="$:/status/UserName">
 <pre></pre>
 </div>
-<div list="[[האחיות כהן]]" title="$:/StoryList">
+<div list="[[סטיב בושמי]] [[האחיות כהן]]" title="$:/StoryList">
 <pre></pre>
 </div>
 <div plugin-type="info" title="$:/temp/info-plugin" type="application/json">
@@ -15938,7 +15938,7 @@ CJ, הקשוחה שבחבורה. ימאית, מתבודדת, חשדנית. זו 
 
 </pre>
 </div>
-<div created="20171219115813335" modified="20200218203920820" tags="[[אחיות חוץ]] סרטים טלוויזיה סדרות" title="סטיב בושמי">
+<div created="20171219115813335" modified="20200218205549818" tags="[[אחיות חוץ]] סרטים טלוויזיה סדרות הסופרנוס" title="סטיב בושמי">
 <pre>[img[pictures/steve-buscemi.jpg]]
 
 !!![[יויו]]:
