--- a/english.html
+++ b/english.html
@@ -8542,7 +8542,7 @@ Error message and password prompt
 <div created="20161026202658363" creator="b" modified="20161026202700307" modifier="b" title="$:/status/UserName">
 <pre></pre>
 </div>
-<div list="[[Steve Buscemi]] [[Coen Sisters]]" title="$:/StoryList">
+<div list="[[TV Series]] [[Coen Sisters]]" title="$:/StoryList">
 <pre></pre>
 </div>
 <div plugin-type="info" title="$:/temp/info-plugin" type="application/json">
@@ -8562,7 +8562,7 @@ Error message and password prompt
 <div created="20161026143719829" modified="20161026143722391" title="$:/temp/RemoteAssetSearch/$:/config/OfficialPluginLibrary">
 <pre>powered</pre>
 </div>
-<div created="20161023184814872" modified="20200218202258738" title="$:/temp/search">
+<div created="20161023184814872" modified="20200218210615188" title="$:/temp/search">
 <pre></pre>
 </div>
 <div created="20161026143331446" modified="20161026143331446" tags="$:/tags/ServerConnection" title="$:/temp/ServerConnection/http://tiddlywiki.com/library/v5.1.13/index.html" url="http://tiddlywiki.com/library/v5.1.13/index.html">
@@ -11163,10 +11163,10 @@ When we came from Paris for [[our mother's funeral|RIP Dina]], [[Gura]] and I, a
 
  &lt;&lt;heblink [[טלוויזיה]]&gt;&gt;</pre>
 </div>
-<div created="20200212165433684" modified="20200212210110029" tags="TV" title="TV Series">
+<div created="20200212165433684" modified="20200218210634308" tags="TV" title="TV Series">
 <pre>[img[pictures/sdarot.jpg]]
 
-&lt;&lt;list-links filter:&quot;[tag[TV series]]&quot;&gt;&gt;
+&lt;&lt;list-links filter:&quot;[tag[TV Series]]&quot;&gt;&gt;
 
  &lt;&lt;heblink [[סדרות]]&gt;&gt;
 
