--- a/english.html
+++ b/english.html
@@ -8542,7 +8542,7 @@ Error message and password prompt
 <div created="20161026202658363" creator="b" modified="20161026202700307" modifier="b" title="$:/status/UserName">
 <pre></pre>
 </div>
-<div list="[[TV Series]] [[Coen Sisters]]" title="$:/StoryList">
+<div list="Dandan [[Coen Sisters]]" title="$:/StoryList">
 <pre></pre>
 </div>
 <div plugin-type="info" title="$:/temp/info-plugin" type="application/json">
@@ -8562,7 +8562,7 @@ Error message and password prompt
 <div created="20161026143719829" modified="20161026143722391" title="$:/temp/RemoteAssetSearch/$:/config/OfficialPluginLibrary">
 <pre>powered</pre>
 </div>
-<div created="20161023184814872" modified="20200218210615188" title="$:/temp/search">
+<div created="20161023184814872" modified="20200219090334658" title="$:/temp/search">
 <pre></pre>
 </div>
 <div created="20161026143331446" modified="20161026143331446" tags="$:/tags/ServerConnection" title="$:/temp/ServerConnection/http://tiddlywiki.com/library/v5.1.13/index.html" url="http://tiddlywiki.com/library/v5.1.13/index.html">
@@ -9191,7 +9191,7 @@ It's already November, [[Wyclef|Wyclef Jean]] should have come back by now. It's
 
  &lt;&lt;heblink [[בתי קפה]]&gt;&gt;</pre>
 </div>
-<div created="20200215120453473" modified="20200215142647900" tags="[[Dandan went]] Laundry [[Coen sister]]" title="Dandan">
+<div created="20200215120453473" modified="20200219090452553" tags="[[Dandan went]] Laundry [[Coen sister]]" title="Dandan">
 <pre>[img[pictures/dandan.jpg]]
 
 !!![[Dandan]]:
@@ -9201,7 +9201,7 @@ Sometimes I miss my uncle Mo and mom, but it's not like I really need to see the
 
 I celebrated my 18th birthday with my mom, who was hospitalized at that time in a boutique sanatorium in Colorado. My birthday is in February. It was freezing. We sat in her warm pleasant room. We ordered tons of food courses, from a faraway eastern country restaurant, we ate with appetite and chitchatted. Even the strong meds she was on couldn't neutralize her naughtiness and her kindness. She told me that she wants me to have a good life. 
 
-Now my life is good. I live with the people I love. We do many things. I feel beloved and wanted. I provide for myself with dignity and think about it. By the way, my full official name is Daniel Jesse Wineman. 
+Now my life is good. I live with the people I love. We do many things. I feel beloved and wanted. I provide for myself with dignity and think about it. By the way, my full official name is Daniel Jesse Weineman. 
 
 !!![[Iry]]:
 
